add balance logic
