# server/dataccess/Entities/TransactionStatus.cs
@@ -4,5 +4,6 @@ public enum TransactionStatus
 {
     Pending,
     Accepted,
-    Rejected
+    Rejected,
+    Cancelled
 }
